# fft_test

./: CMakeLists.txt  README.md  fftqwr4.f90  fftqwr8.f90  fftr4.f90  fftr8.f90  fftr8_cufft.cuf  gemmr4.f90  gemmr8.f90  matqwr4.f90  matqwr8.f90  matr4.f90  matr8.f90  matr8_cublas.cuf  plot_results.py  plot_results_threading.py  plot_resultsqw.py  results.csv  results_threading.csv  resultsqw.csv
